--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -117,7 +117,11 @@
       {% endif %}
       {% if author.wikipedia %}
         <li><a href="https://en.wikipedia.org/wiki/User:{{ author.wikipedia }}"><i class="fab fa-fw fa-wikipedia-w" aria-hidden="true"></i> Wikipedia</a></li>
-{% endif %}
+      {% endif %}
+
+      {% if author.wikipedia %}
+      <li><a href="https://flagcounter.me/details/doX"><img src="https://flagcounter.me/doX/" alt="Flag Counter"></a></li>
+      {% endif %}
     </ul>
   </div>
 </div>
