--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -119,7 +119,7 @@
         <li><a href="https://en.wikipedia.org/wiki/User:{{ author.wikipedia }}"><i class="fab fa-fw fa-wikipedia-w" aria-hidden="true"></i> Wikipedia</a></li>
       {% endif %}
 
-      {% if author.wikipedia %}
+      {% if author.person_statistic %}
       <li><a href="https://flagcounter.me/details/doX"><img src="https://flagcounter.me/doX/" alt="Flag Counter"></a></li>
       {% endif %}
     </ul>
