增加主页访问的总数组件

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -121,6 +121,7 @@
 
       {% if author.person_statistic %}
       <li><a href="https://flagcounter.me/details/doX"><img src="https://flagcounter.me/doX/" alt="Flag Counter"></a></li>
+      <li><img src="https://komarev.com/ghpvc/?username=qiao19981314&label=PROFILE+VIEWS"></li>
       {% endif %}
     </ul>
   </div>
