更改访问统计

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -120,8 +120,8 @@
       {% endif %}
 
       {% if author.person_statistic %}
+      <li>PROFILE VIEWS: <img src="https://profile-counter.glitch.me/qiao19981314/count.svg"></li>
       <li><a href="https://flagcounter.me/details/doX"><img src="https://flagcounter.me/doX/" alt="Flag Counter"></a></li>
-      <li><img src="https://komarev.com/ghpvc/?username=qiao19981314&label=PROFILE+VIEWS"></li>
       {% endif %}
     </ul>
   </div>
