更改主页访问组件额布局

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -120,7 +120,8 @@
       {% endif %}
 
       {% if author.person_statistic %}
-      <li>PROFILE VIEWS: <img src="https://profile-counter.glitch.me/qiao19981314/count.svg"></li>
+      <li>PROFILE VIEWS: </li>
+      <li><img src="https://profile-counter.glitch.me/qiao19981314/count.svg"></li>
       <li><a href="https://flagcounter.me/details/doX"><img src="https://flagcounter.me/doX/" alt="Flag Counter"></a></li>
       {% endif %}
     </ul>
