--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,94 +1,95 @@
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="generator" content="Wowchemy 5.5.0 for Hugo" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" media="print" onload="this.media='all'">
-<meta name="author" content="Shirui Pan" />
-<meta name="description" content="Professor and ARC Future Fellow" />
-<link rel="alternate" hreflang="en-us" href="https://shiruipan.github.io/" />
-<meta name="theme-color" content="#1565c0" />
-<link rel="stylesheet" href="/css/vendor-bundle.min.c7b8d9abd591ba2253ea42747e3ac3f5.css" media="print" onload="this.media='all'">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css" integrity="sha512-W0xM4mr6dEP9nREo7Z9z+9X70wytKvMGeDsj7ps2+xg5QPrEBXC8tAW1IFnzjR6eoJ90JmCnFzerQJTLzIEHjA==" crossorigin="anonymous" media="print" onload="this.media='all'">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/github.min.css" crossorigin="anonymous" title="hl-light" media="print" onload="this.media='all'">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/dracula.min.css" crossorigin="anonymous" title="hl-dark" media="print" onload="this.media='all'" disabled>  
-<link rel="stylesheet" href="/css/wowchemy.246563c78e87c9f0ab2a19340d3449fd.css" />
-<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-<link rel="alternate" href="/index.xml" type="application/rss+xml" title="Shirui Pan" />
-<link rel="manifest" href="/manifest.webmanifest" />
-<link rel="icon" type="image/png" href="/media/icon_hu59d1f1cfeeafec33917f8e7cb700ff18_30479_32x32_fill_lanczos_center_3.png" />
-<link rel="apple-touch-icon" type="image/png" href="/media/icon_hu59d1f1cfeeafec33917f8e7cb700ff18_30479_180x180_fill_lanczos_center_3.png" />
-<link rel="canonical" href="https://shiruipan.github.io/" />
-<meta property="twitter:card" content="summary" />
-<meta property="og:site_name" content="Shirui Pan" />
-<meta property="og:url" content="https://shiruipan.github.io/" />
-<meta property="og:title" content="Shirui Pan" />
-<meta property="og:description" content="Professor and ARC Future Fellow" /><meta property="og:image" content="https://shiruipan.github.io/media/icon_hu59d1f1cfeeafec33917f8e7cb700ff18_30479_512x512_fill_lanczos_center_3.png" />
-<meta property="twitter:image" content="https://shiruipan.github.io/media/icon_hu59d1f1cfeeafec33917f8e7cb700ff18_30479_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
-<meta property="og:updated_time" content="2030-06-01T13:00:00&#43;00:00" />
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebSite",
-  "potentialAction": {
-    "@type": "SearchAction",
-    "target": "https://shiruipan.github.io/?q={search_term_string}",
-    "query-input": "required name=search_term_string"
-  },
-  "url": "https://shiruipan.github.io/"
-}
-</script>
-  <title>Shirui Pan</title>
-</head>
-
-
-
-<div class="row">
-      <div class="col-md-5">
-        <div class="section-subheading">Interests</div>
-        <ul class="ul-interests mb-0">
-          <li>Artificial Intelligence</li>
-          <li>Machine Learning</li>
-          <li>Deep Learning</li>
-        </ul>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="generator" content="Wowchemy 5.5.0 for Hugo" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" media="print" onload="this.media='all'">
+  <meta name="author" content="Yongliang Qiao" />
+  <meta name="description" content="Professor and ARC Future Fellow" />
+  <link rel="alternate" hreflang="en-us" href="https://qiao19981314.github.io/" />
+  <meta name="theme-color" content="#1565c0" />
+  <link rel="stylesheet" href="/css/vendor-bundle.min.c7b8d9abd591ba2253ea42747e3ac3f5.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css" integrity="sha512-W0xM4mr6dEP9nREo7Z9z+9X70wytKvMGeDsj7ps2+xg5QPrEBXC8tAW1IFnzjR6eoJ90JmCnFzerQJTLzIEHjA==" crossorigin="anonymous" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/github.min.css" crossorigin="anonymous" title="hl-light" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/dracula.min.css" crossorigin="anonymous" title="hl-dark" media="print" onload="this.media='all'" disabled>  
+  <link rel="stylesheet" href="/css/wowchemy.246563c78e87c9f0ab2a19340d3449fd.css" />
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Shirui Pan" />
+  <link rel="manifest" href="/manifest.webmanifest" />
+  <link rel="icon" type="image/png" href="/media/icon_hu59d1f1cfeeafec33917f8e7cb700ff18_30479_32x32_fill_lanczos_center_3.png" />
+  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu59d1f1cfeeafec33917f8e7cb700ff18_30479_180x180_fill_lanczos_center_3.png" />
+  <link rel="canonical" href="https://qiao19981314.github.io/" />
+  <meta property="twitter:card" content="summary" />
+  <meta property="og:site_name" content="Yongliang Qiao" />
+  <meta property="og:url" content="https://qiao19981314.github.io/" />
+  <meta property="og:title" content="Shirui Pan" />
+  <meta property="og:description" content="Professor and ARC Future Fellow" /><meta property="og:image" content="https://qiao19981314.github.io/media/icon_hu59d1f1cfeeafec33917f8e7cb700ff18_30479_512x512_fill_lanczos_center_3.png" />
+  <meta property="twitter:image" content="https://qiao19981314.github.io/media/icon_hu59d1f1cfeeafec33917f8e7cb700ff18_30479_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:updated_time" content="2030-06-01T13:00:00&#43;00:00" />
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://qiao19981314.github.io/?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    },
+    "url": "https://qiao19981314.github.io/"
+  }
+  </script>
+    <title>Yongliang Qiao</title>
+  </head>
+  
+  
+  
+  <div class="row">
+        <div class="col-md-5">
+          <div class="section-subheading">Interests</div>
+          <ul class="ul-interests mb-0">
+            <li>Artificial Intelligence</li>
+            <li>Machine Learning</li>
+            <li>Deep Learning</li>
+          </ul>
+        </div>
+        
+        <div class="col-md-7">
+          <div class="section-subheading">Education</div>
+          <ul class="ul-edu fa-ul mb-0">
+            <li>
+              <i class="fa-li fas fa-graduation-cap"></i>
+              <div class="description">
+                <p class="course">Researcher in Computer Science, 2017</p>
+                <p class="institution">The University of Sydney</p>
+              </div>
+            </li>
+            
+            <li>
+              <i class="fa-li fas fa-graduation-cap"></i>
+              <div class="description">
+                <p class="course">PhD in Computer Science, 2013</p>
+                <p class="institution">University Bourgogne Franche-Comté (UBFC)</p>
+              </div>
+            </li>
+  
+            <li>
+              <i class="fa-li fas fa-graduation-cap"></i>
+              <div class="description">
+                <p class="course">MSc in Computer Science, 2010</p>
+                <p class="institution">Northwestern A&F University</p>
+              </div>
+            </li>
+  
+            <li>
+              <i class="fa-li fas fa-graduation-cap"></i>
+              <div class="description">
+                <p class="course">BSc in Computer Science, 2006</p>
+                <p class="institution">Northwestern A&F University</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
-      
-      <div class="col-md-7">
-        <div class="section-subheading">Education</div>
-        <ul class="ul-edu fa-ul mb-0">
-          <li>
-            <i class="fa-li fas fa-graduation-cap"></i>
-            <div class="description">
-              <p class="course">Researcher in Computer Science, 2017</p>
-              <p class="institution">The University of Sydney</p>
-            </div>
-          </li>
-          
-          <li>
-            <i class="fa-li fas fa-graduation-cap"></i>
-            <div class="description">
-              <p class="course">PhD in Computer Science, 2013</p>
-              <p class="institution">University Bourgogne Franche-Comté (UBFC)</p>
-            </div>
-          </li>
-
-          <li>
-            <i class="fa-li fas fa-graduation-cap"></i>
-            <div class="description">
-              <p class="course">MSc in Computer Science, 2010</p>
-              <p class="institution">Northwestern A&F University</p>
-            </div>
-          </li>
-
-          <li>
-            <i class="fa-li fas fa-graduation-cap"></i>
-            <div class="description">
-              <p class="course">BSc in Computer Science, 2006</p>
-              <p class="institution">Northwestern A&F University</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
+  
