增加博士帽子图标的css链接

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -28,6 +28,7 @@
   <meta property="og:description" content="Professor and ARC Future Fellow" /><meta property="og:image" content="https://qiao19981314.github.io/media/icon_hu59d1f1cfeeafec33917f8e7cb700ff18_30479_512x512_fill_lanczos_center_3.png" />
   <meta property="twitter:image" content="https://qiao19981314.github.io/media/icon_hu59d1f1cfeeafec33917f8e7cb700ff18_30479_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   <meta property="og:updated_time" content="2030-06-01T13:00:00&#43;00:00" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -52,6 +53,10 @@
             <li>Artificial Intelligence</li>
             <li>Machine Learning</li>
             <li>Deep Learning</li>
+            <li>Smart farming</li>
+            <li>Agricultural robots</li>
+            <li>Multi-sensor fusion</li>
+            <li>Intelligent perception</li>
           </ul>
         </div>
         
