--- a/_includes/team_people.html
+++ b/_includes/team_people.html
@@ -1,19 +1,19 @@
 <section id="people" class="home-section wg-people  ">
     <div class="container">
-        <div class="row justify-content-center people-widget">
-            <div class="col-md-12">
-                <!-- <h2 class="mb-4">NetWork</h2> -->
-            </div>
-            <div class="col-12 col-sm-auto people-person">
-                <a href="/authors/admin/">
-                    <img width="270" height="270" loading="lazy" class="avatar avatar-circle" src="/authors/images/author.png" alt="Avatar">
-                </a>
-                <div class="portrait-title">
-                    <h2>
-                        <a href="/authors/admin/">Yongliang Qiao</a>
-                    </h2>
-                    <h3>Researcher in Computer Science</h3>
-                    <!-- <ul class="network-icon" aria-hidden="true">
+      <div class="row justify-content-center people-widget">
+        <div class="col-md-12">
+          <!-- <h2 class="mb-4">NetWork</h2> -->
+        </div>
+        <div class="col-12 col-sm-auto people-person">
+          <a href="/authors/admin/">
+            <img width="270" height="270" loading="lazy" class="avatar avatar-circle" src="/authors/images/author.png" alt="Avatar">
+          </a>
+          <div class="portrait-title">
+            <h2>
+              <a href="/authors/admin/">Yongliang Qiao</a>
+            </h2>
+            <h3>Researcher in Computer Science</h3>
+            <!-- <ul class="network-icon" aria-hidden="true">
               <li>
                 <a href="/#contact">
                   <i class="fas fa-envelope">
@@ -45,64 +45,68 @@
                 </a>
               </li>
             </ul> -->
-                </div>
-            </div>
+          </div>
+        </div>
 
 
-
-            <!-- <div class="col-md-12">
+        
+        <!-- <div class="col-md-12">
           <h2 class="mb-4">NetWork</h2>
         </div> -->
-            <div class="col-12 col-sm-auto people-person">
-                <a href="/authors/luzhi-wang/">
-                    <img width="270" height="270" loading="lazy" class="avatar avatar-circle" src="/authors/images/MingleXu.png" alt="Avatar">
-                </a>
-                <div class="portrait-title">
-                    <h2>
-                        <a href="/authors/luzhi-wang/">Mingle Xu</a>
-                    </h2>
-                    <h3>
-                        <!-- 可换行 -->
-                        Jeonbuk National University <br/> Jeonju, Republic of Korea
-
-                    </h3>
-                    <ul class="network-icon" aria-hidden="true">
-                    </ul>
-                </div>
-            </div>
-            <div class="col-12 col-sm-auto people-person">
-                <a href="/authors/xin-zheng/">
-                    <img width="270" height="270" loading="lazy" class="avatar avatar-circle" src="/authors/images/Karansher Singh Sandhu.png" alt="Avatar">
-                </a>
-                <div class="portrait-title">
-                    <h2>
-                        <a href="/authors/xin-zheng/">Karansher Singh Sandhu</a>
-                    </h2>
-                    <h3>Bayer Crop Science (United States) St. Louis, United States</h3>
-                    <ul class="network-icon" aria-hidden="true">
-                    </ul>
-                </div>
-            </div>
-            <div class="col-12 col-sm-auto people-person">
-                <a href="/authors/yizhen-zheng/">
-                    <img width="270" height="270" loading="lazy" class="avatar avatar-circle" src="/authors/images/Yunchao Tang.png" alt="Avatar">
-                </a>
-                <div class="portrait-title">
-                    <h2>
-                        <a href="/authors/yizhen-zheng/">Yunchao Tang</a>
-                    </h2>
-                    <h3>Zhongkai University of Agriculture and Engineering Guangzhou, China</h3>
-                    <ul class="network-icon" aria-hidden="true">
-                        <li>
-                            <a href="//scholar.google.com/citations?user=TtzA-90AAAAJ&amp;hl=en">
-                                <!-- <i class="ai ai-google-scholar"> -->
-                                <!-- </i> -->
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
+        <div class="col-12 col-sm-auto people-person">
+          <a href="/authors/luzhi-wang/">
+            <img width="270" height="270" loading="lazy" class="avatar avatar-circle" src="/authors/images/MingleXu.png" alt="Avatar">
+          </a>
+          <div class="portrait-title">
+            <h2>
+              <a href="/authors/luzhi-wang/">Mingle Xu</a>
+            </h2>
+            <h3>
+              <!-- 可换行 -->
+                Jeonbuk National University <br/>
+                Jeonju, Republic of Korea 
+       
+            </h3>
+            <ul class="network-icon" aria-hidden="true">
+            </ul>
+          </div>
         </div>
-        <!-- 不知道为啥,下面的section没有解析, 先注释掉 -->
-        <!-- </section>   -->
+        <div class="col-12 col-sm-auto people-person">
+          <a href="/authors/xin-zheng/">
+            <img width="270" height="270" loading="lazy" class="avatar avatar-circle" src="/authors/images/Karansher Singh Sandhu.png" alt="Avatar">
+          </a>
+          <div class="portrait-title">
+            <h2>
+              <a href="/authors/xin-zheng/">Karansher Singh Sandhu</a>
+            </h2>
+            <h3>Bayer Crop Science (United States)
+              St. Louis, United States</h3>
+            <ul class="network-icon" aria-hidden="true">
+            </ul>
+          </div>
+        </div>
+        <div class="col-12 col-sm-auto people-person">
+          <a href="/authors/yizhen-zheng/">
+            <img width="270" height="270" loading="lazy" class="avatar avatar-circle" src="/authors/images/Yunchao Tang.png" alt="Avatar">
+          </a>
+          <div class="portrait-title">
+            <h2>
+              <a href="/authors/yizhen-zheng/">Yunchao Tang</a>
+            </h2>
+            <h3>Zhongkai University of Agriculture and Engineering
+              Guangzhou, China</h3>
+            <ul class="network-icon" aria-hidden="true">
+              <li>
+                <a href="//scholar.google.com/citations?user=TtzA-90AAAAJ&amp;hl=en">
+                  <!-- <i class="ai ai-google-scholar"> -->
+                  <!-- </i> -->
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+      <!-- 不知道为啥,下面的section没有解析, 先注释掉 -->
+    </div>
+</section>  
