--- a/_includes/News.html
+++ b/_includes/News.html
@@ -1,7 +1,7 @@
 <ul>
-    <li style="margin: 0;"><span style="color:red"> <b>[Paper]: </b> </span> One paper was accepted by Computers and Electronics in Agriculture  (17/01/2023).
+    <li style="margin: 0;"><span style="color:red"> <b>[Paper]: </b> </span> Our Research Topic in Frontier in Plant Science: “AI, Sensors and Robotics in Plant Phenotyping and Precision Agriculture, Volume II” is the winner of Global Plant Council Prize.  (10/05/2023).
         <ul style="margin: 0;">
-        <li>one paper as Research Paper (Acceptance Rate: 20%)</li>
+        <li>Thanks everone's work!</li>
         </ul>
     </li>
 </ul>
