--- a/_includes/education.html
+++ b/_includes/education.html
@@ -15,13 +15,6 @@
         <div class="col-md-7">
           <div class="section-subheading">Education</div>
           <ul class="ul-edu fa-ul mb-0">
-            <li>
-              <i class="fa-li fas fa-graduation-cap"></i>
-              <div class="description">
-                <p class="course">Researcher in Computer Science</p>
-                <p class="institution">The University of Sydney</p>
-              </div>
-            </li>
             
             <li>
               <i class="fa-li fas fa-graduation-cap"></i>
@@ -34,7 +27,7 @@
             <li>
               <i class="fa-li fas fa-graduation-cap"></i>
               <div class="description">
-                <p class="course">MSc in Computer Science</p>
+                <p class="course">MSc in Agricultural Electrification and Automation</p>
                 <p class="institution">Northwestern A&F University</p>
               </div>
             </li>
@@ -42,7 +35,7 @@
             <li>
               <i class="fa-li fas fa-graduation-cap"></i>
               <div class="description">
-                <p class="course">BSc in Computer Science</p>
+                <p class="course">BSc in Electrical Engineering and Automation</p>
                 <p class="institution">Northwestern A&F University</p>
               </div>
             </li>
