--- a/_includes/education.html
+++ b/_includes/education.html
@@ -3,11 +3,9 @@
           <div class="section-subheading">Interests</div>
           <ul class="ul-interests mb-0">
             <li>Artificial Intelligence</li>
-            <li>Machine Learning</li>
-            <li>Deep Learning</li>
-            <li>Smart farming</li>
             <li>Agricultural robots</li>
-            <li>Multi-sensor fusion</li>
+            <li>Causility</li>
+            <li>Smart farming</li>
             <li>Intelligent perception</li>
           </ul>
         </div>
