--- a/_includes/service.html
+++ b/_includes/service.html
@@ -9,7 +9,7 @@
               <li>Associate editor for <a href="https://www.sciencedirect.com/journal/computers-and-electronics-in-agriculture" target="_blank" rel="noopener">Computers and electronics in agriculture</a> (IF 6.757)  </li>
               <li>Collection editor for <a href="https://www.mdpi.com/journal/sensors" target="_blank" rel="noopener">Sensors</a> (IF 3.57)   </li>
               <li>Guest editor for <a href="https://www.mdpi.com/journal/agronomy" target="_blank" rel="noopener">Agronomy</a> </li>
-              <li><a href="https://www.frontiersin.org/journals/genetics" target="_blank" rel="noopener">Frontiers in Genetics</a>  (IF 4.274)  </li>
+              <li>Guest editor for <a href="https://www.frontiersin.org/journals/genetics" target="_blank" rel="noopener">Frontiers in Genetics</a>  (IF 4.274)  </li>
             </url>
            </div>
 
