--- a/_includes/News.html
+++ b/_includes/News.html
@@ -1,8 +1,15 @@
 <ul>
-    <li style="margin: 0;"><span style="color:red"> <b>[Paper]: </b> </span> Our Research Topic in Frontier in Plant Science: “AI, Sensors and Robotics in Plant Phenotyping and Precision Agriculture, Volume II” is the winner of Global Plant Council Prize.  (10/05/2023).
-        <ul style="margin: 0;">
-        <li>Thanks everone's work!</li>
-        </ul>
+    <li style="margin: 0;"><span style="color:red"> <b><a href="https://events.vtools.ieee.org/m/377657">[IEEE RAS Seminar - SPEAKER]</a>: </b> </span> ARTIFICIAL INTELLIGENCE AND ROBOTICS IN SMART AGRICULTURE. <b>(09 October 2023 - 27 October 2023)</b>
+        <!-- <ul style="margin: 0;">
+        <li></li>
+        </ul> -->
+    </li>
+</ul>
+
+
+<ul>
+    <li style="margin: 0;"><span style="color:red"> <b><a href="https://globalplantcouncil.org/announcing-the-winner-of-the-2022-global-plant-council-prize/#:~:text=The%20Global%20Plant%20Council%20and%20Frontiers%20in%20Plant,University%29%2C%20and%20Dr%20Daobilige%20Su%20%28China%20Agricultural%20University%29.">[The winner of Global Plant Council Prize]</a>: </b> </span> Our Research Topic in Frontier in Plant Science: “AI, Sensors and Robotics in Plant Phenotyping and Precision Agriculture, Volume II” is the winner of Global Plant Council Prize. Thanks everone's work!<b>(05 October 2023)</b>
+
     </li>
 </ul>
 
